--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
+
+<!DOCTYPE html>
+
 <html lang="en">
 
 <!-- Mirrored from doccure-html.dreamguystech.com/cardiology/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 02 Dec 2021 06:32:21 GMT -->
